<?xml version="1.0" encoding="utf-8"?>
<!--
The MIT License (MIT)

Copyright (c) 2016, 2024 IBM Corporation, Carnegie Mellon University and others
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hulop.navcog.RatingActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/wiX_qL_za0_text"
                android:textColor="@android:color/black" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/TextView_rating_overall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MS2_Hi_s8w_text"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/ratingBar_overallStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:stepSize="1.0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TextView_rating_overall" />

                <TextView
                    android:id="@+id/textView_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sKk_Gk_LQ6_text"
                    app:layout_constraintBottom_toBottomOf="@+id/ratingBar_overallStars"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ratingBar_overallStars" />

                <TextView
                    android:id="@+id/textView_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/_2uI_Co_rNz_text"
                    app:layout_constraintBottom_toBottomOf="@+id/ratingBar_overallStars"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ratingBar_overallStars" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar_overallStars" />

                <TextView
                    android:id="@+id/textView_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/_5dY_jL_v7n_text"
                    app:layout_constraintEnd_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />
            </android.support.constraint.ConstraintLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ZRc_BH_IJT_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_q1Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iaC_38_VID_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_q2Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0ng_RD_u8G_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_q3Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IG6_Ac_J5o_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_q4Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/textView_aq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_q1_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_aq1Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/textView_aq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_q2_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_aq2Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/textView_aq3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_q3_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_aq3Stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:stepSize="1.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/free_comment"
                android:text="@string/AZZ_SF_owM_text"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/free_comment"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:background="@drawable/edit_text_frame"
                android:gravity="top"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
